--- a/iChat-serve/pom.xml
+++ b/iChat-serve/pom.xml
@@ -20,6 +20,12 @@
         <lombok.version>1.18.2</lombok.version>
         <gson.version>2.9.1</gson.version>
         <pagehelper.version>1.4.5</pagehelper.version>
+        <fastjson.version>1.2.62</fastjson.version>
+        <hutool.version>5.8.11</hutool.version>
+        <httpclient.version>4.5.2</httpclient.version>
+        <commons-collections4.version>4.4</commons-collections4.version>
+        <commons-io.version>2.8.0</commons-io.version>
+        <mybatis-puls.version>3.5.2</mybatis-puls.version>
     </properties>
 
     <packaging>pom</packaging>
