--- a/iChat-serve/iChat-common/pom.xml
+++ b/iChat-serve/iChat-common/pom.xml
@@ -170,6 +170,11 @@
             <version>${jwt.version}</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.12.2</version>
+        </dependency>
     </dependencies>
 
 </project>
