--- a/iChat-serve/iChat-auth-9000/pom.xml
+++ b/iChat-serve/iChat-auth-9000/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>iChat-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <packaging>jar</packaging>
