--- a/iChat-vue/package.json
+++ b/iChat-vue/package.json
@@ -9,11 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "axios": "^1.3.4",
+    "less": "^4.1.3",
+    "pinia": "^2.0.33",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "naive-ui": "^2.34.3",
     "typescript": "^4.9.3",
+    "vfonts": "^0.0.3",
     "vite": "^4.1.0",
     "vue-tsc": "^1.0.24"
   }
