--- a/iChat-vue/package.json
+++ b/iChat-vue/package.json
@@ -13,6 +13,7 @@
     "element-plus": "^2.3.1",
     "less": "^4.1.3",
     "pinia": "^2.0.33",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "qs": "^6.11.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
