--- a/iChat-vue/package.json
+++ b/iChat-vue/package.json
@@ -19,10 +19,12 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@vicons/ionicons5": "^0.12.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "naive-ui": "^2.34.3",
     "typescript": "^4.9.3",
     "vfonts": "^0.0.3",
+    "vicons": "^0.0.1",
     "vite": "^4.1.0",
     "vue-tsc": "^1.0.24"
   }
