--- a/iChat-serve/pom.xml
+++ b/iChat-serve/pom.xml
@@ -12,6 +12,7 @@
         <module>iChat-common</module>
         <module>iChat-auth-9000</module>
         <module>iChat-image-9002</module>
+        <module>iChat-chatGPT-9003</module>
     </modules>
 
     <properties>
