Update chatgpt sdk

--- a/iChat-serve/iChat-chatGPT-9003/src/main/resources/application.yml
+++ b/iChat-serve/iChat-chatGPT-9003/src/main/resources/application.yml
@@ -1,2 +1,6 @@
 server:
   port: 9003
+open:
+  ai:
+    url: https://api.openai.com/v1/completions
+    token: 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
