--- a/iChat-vue/package.json
+++ b/iChat-vue/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "axios": "^1.3.4",
     "element-plus": "^2.3.1",
+    "event-source-polyfill": "^1.0.31",
     "less": "^4.1.3",
+    "marked": "^4.3.0",
     "pinia": "^2.0.33",
     "pinia-plugin-persistedstate": "^3.1.0",
     "qs": "^6.11.1",
@@ -30,6 +32,8 @@
     "vfonts": "^0.0.3",
     "vicons": "^0.0.1",
     "vite": "^4.1.0",
+    "vue-loader": "^17.0.1",
+    "vue-template-compiler": "^2.7.14",
     "vue-tsc": "^1.0.24"
   }
 }
