--- a/iChat-serve/iChat-auth-9000/src/main/resources/application.yml
+++ b/iChat-serve/iChat-auth-9000/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://47.120.12.23:3306/iChat?useUnicode=true&characterEncoding=utf8&serverTimezone=CTT
+    url: jdbc:mysql://8.134.51.235:3306/iChat?useUnicode=true&characterEncoding=utf8&serverTimezone=CTT
     username: root
-    password: As603888
+    password: '010626'
 
 mybatis-plus:
   type-aliases-package: com.studio.common.model.pojo
@@ -21,8 +21,8 @@ logging:
 # 下面几个是自定义的，rsa也是自定义的
 rsa:
   key:
-    pubKeyPath: /Users/binbini/Documents/workspace/iChat/iChat-serve/auth_key/id_key_rsa.pub
-    priKeyPath: /Users/binbini/Documents/workspace/iChat/iChat-serve/auth_key/id_key_rsa
+    pubKeyPath: /Users/binbini/Documents/workspace/study-demo/iChat/iChat-serve/auth_key/id_key_rsa.pub
+    priKeyPath: /Users/binbini/Documents/workspace/study-demo/iChat/iChat-serve/auth_key/id_key_rsa
 #rsa:
 #  key:
 #    pubKeyPath: /root/data/auth_key/id_key_rsa.pub
