--- a/iChat-serve/iChat-chat-9001/src/main/resources/application.yml
+++ b/iChat-serve/iChat-chat-9001/src/main/resources/application.yml
@@ -15,15 +15,16 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://47.120.12.23:3306/iChat?useUnicode=true&characterEncoding=utf8&serverTimezone=CTT
+    url: jdbc:mysql://8.134.51.235:3306/iChat?useUnicode=true&characterEncoding=utf8&serverTimezone=CTT
     username: root
-    password: As603888
+    password: '010626'
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
     redis:
-      host: 47.120.12.23
+      host: 8.134.51.235
       port: 6379
+      password: '010626'
       lettuce:
         pool:
           max-wait: 100000
@@ -31,10 +32,10 @@ spring:
           max-active: 100
       timeout: 5000
   rabbitmq:
-    host: 47.120.12.23
+    host: 8.134.51.235
     port: 5672
     username: admin
-    password: As603888
+    password: '010626'
   freemarker:
     suffix: .ftl
     charset: UTF-8
@@ -72,4 +73,4 @@ pic:
   dir: /root/data/images/
 rsa:
   key:
-    pubKeyPath: /Users/binbini/Documents/workspace/iChat/iChat-serve/auth_key/id_key_rsa.pub
+    pubKeyPath: /Users/binbini/Documents/workspace/study-demo/iChat/iChat-serve/auth_key/id_key_rsa.pub
